[package]
name = "tsq"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kaushikkar <neil.kaushikkar@gmail.com>"]
description = "A Rust implementation of a thread-safe queue."
repository = "https://github.com/nkaush/thread-safe-queue/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
